# csagame

./: Cargo.toml  README.md
aseprite/: BackgroundTiles.aseprite  Entity.aseprite  Foliage.aseprite  Goal.aseprite  MiddlegroundTiles.aseprite  Start.aseprite  Tiles.aseprite
aseprite/Character Guide/: Character.aseprite
aseprite/Characters/: HumanMale1.aseprite
src/: camera.rs  layer.rs  main.rs  player.rs  surrounds.rs  tile.rs
src/character/: animation.rs  collision.rs  mod.rs
src/terrain/: bevy_connect.rs  layer.rs  mod.rs  node.rs  settings.rs
src/tile/: mod.rs  multi_tile.rs
src/world/: mod.rs  settings.rs
