[package]
name = "csagame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
noise = "0.7.0"
rand = "0.8.5"
rand_seeder = "0.2.3"
bevy_ecs_tilemap = {git = "https://github.com/StarArawn/bevy_ecs_tilemap"}
bitflags = "1.3.2"